--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ favicon: /favicon.png
 monochrome: true
 
 # view setting
-avatar: https://cn.gravatar.com/avatar/35fef74d731255cd569c2c2b0b9e87e4?s=200
+avatar: http://cn.gravatar.com/avatar/b2e34acac8b6f4cc19f054e8089c638f?s=200
 avatarLink: /about
 maxContentWidth: 1000px # set the main content column's max-width property. keep it blank to unlimited the width
 copyright: # the copyright text in the footer, could be richtext
@@ -33,12 +33,6 @@ nav:
       name: By Year
       url: /archives
   -
-    -
-      name: Chan
-      url: https://github.com/denjones/hexo-theme-chan
-    -
-      name: Github
-      url: https://github.com/denjones
     -
       name: RSS
       url: /atom.xml
